--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <h4 class="text-2xl mb-3 font-bold text-primary lg:text-3xl">About Me</h4>
           <h3 class="font-bold text-white mb-3 text-xl lg:text-3xl">Personal Information</h3>
           <p class="font-medium text-base text-white max-w-xl lg:text-lg">
-            My name is Ivan Alif Hadrian, usually called Ivan, I am 19 years old and Lampung
+            My name is Ivan Alif Hadrian, usually called Ivan, I am 20 years old and Lampung
             University Informatics Engineering Student
           </p>
         </div>
@@ -125,51 +125,23 @@
           <h3 class="font-bold text-white mb-3 text-xl lg:text-3xl">Development</h3>
 
           <div class="flex flex-wrap">
-            <div class="mr-3 w-16 h-10 mb-3 bg-primary rounded-md">
-              <p class="py-2 px-3 font-semibold text-white">Html</p>
+            <div class="mr-3 w-25 h-10 mb-3 bg-primary rounded-md">
+              <p class="py-2 px-3 font-semibold text-white">Website Development</p>
             </div>
-            <div class="mr-3 w-16 h-10 bg-primary rounded-md">
-              <p class="py-2 px-5 font-semibold text-white">Css</p>
-            </div>
-            <div class="mr-3 w-24 h-10 mb-3 bg-primary rounded-md">
-              <p class="py-2 px-3 font-semibold text-white">JavaScript</p>
-            </div>
-            <div class="mr-3 w-[100px] h-10 bg-primary rounded-md">
-              <p class="py-2 px-3 font-semibold text-white">Materialize</p>
-            </div>
-            <div class="mr-3 w-24 h-10 mb-3 bg-primary rounded-md">
-              <p class="py-2 px-3 font-semibold text-white">Bootstrap</p>
-            </div>
-            <div class="mr-3 w-20 h-10 bg-primary rounded-md">
-              <p class="py-2 px-3 font-semibold text-white">Tailwind</p>
-            </div>
-            <div class="mr-3 w-[70px] h-10 bg-primary rounded-md">
-              <p class="py-2 px-3 font-semibold text-white">Flutter</p>
-            </div>
-            <div class="mr-3 w-14 h-10 bg-primary rounded-md">
-              <p class="py-2 px-3 font-semibold text-white">C++</p>
-            </div>
-            <div class="w-[75px] h-10 bg-primary rounded-md">
-              <p class="py-2 px-3 font-semibold text-white">Python</p>
+            <div class="mr-3 w-25 h-10 bg-primary rounded-md">
+              <p class="py-2 px-5 font-semibold text-white">Machine Learning</p>
             </div>
           </div>
         </div>
 
         <div class="w-full px-4 mb-10 lg:w-1/2">
           <h3 class="font-bold text-white mb-3 text-xl lg:text-3xl">Design & Editing</h3>
-
           <div class="flex flex-wrap">
-            <div class="mr-3 w-16 h-10 mb-3 bg-primary rounded-md">
-              <p class="py-2 px-3 font-semibold text-white">Figma</p>
+            <div class="mr-3 w-25 h-10 mb-3 bg-primary rounded-md">
+              <p class="py-2 px-3 font-semibold text-white">UI/UX Design</p>
             </div>
-            <div class="mr-3 w-24 h-10 bg-primary rounded-md">
-              <p class="py-2 px-3 font-semibold text-white">Photoshop</p>
-            </div>
-            <div class="mr-3 w-28 h-10 mb-3 bg-primary rounded-md">
-              <p class="py-2 px-3 font-semibold text-white">Premier pro</p>
-            </div>
-            <div class="mr-3 w-28 h-10 bg-primary rounded-md">
-              <p class="py-2 px-3 font-semibold text-white">After Effect</p>
+            <div class="mr-3 w-25 h-10 bg-primary rounded-md">
+              <p class="py-2 px-3 font-semibold text-white">Video Editor</p>
             </div>
           </div>
         </div>
@@ -190,16 +162,16 @@
       <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
-            <img src="dist/img/portfolio/Screenshot (253).png" alt="Kopi Kenangan" />
+            <img src="dist/img/portfolio/Screenshot 2024-06-01 005255.png" alt="Kopi Kenangan" />
           </div>
-          <h3 class="font-semibold text-xl text-white mt-5 mb-5">Website kopi kenangan senja</h3>
+          <h3 class="font-semibold text-xl text-white mt-5 mb-5">Open Music API</h3>
           <p class="font-medium text-base text-white">
-            Landing page Webite Kopi Kenangan senja
+            Final project of back end developer class in dicoding
           </p>
         </div>
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
-            <img src="dist/img/portfolio/Screenshot (252).png" alt="Bookshelf-API" />
+            <img src="dist/img/portfolio/Screenshot (252).png" alt="Bookshelf API" />
           </div>
           <h3 class="font-semibold text-xl text-white mt-5 mb-5">Bookshelf-API</h3>
           <p class="font-medium text-base text-white">
@@ -376,6 +348,8 @@
                 href="/blog/section/pengantar-teknologi-informasi/index.html">Pengantar Teknologi Informasi</a></li>
             <li><a class="inline-block text-base hover:text-primary mb-3"
                 href="/blog/section/pengetahuan-lingkungan/index.html">Pengetahuan Lingkungan</a></li>
+            <li><a class="inline-block text-base hover:text-primary mb-3"
+                href="/blog/section/jaringan-komputer/index.html">Jaringan Komputer</a></li>
           </ul>
         </div>
 
