--- a/index.html
+++ b/index.html
@@ -156,11 +156,21 @@
     <div class="container">
       <div class="w-full px-4">
         <div class="max-w-xl mx-auto text-center mb-16">
-          <h4 class="font-bold text-xl lg:text-2xl text-primary mb-3">Portfolio</h4>
+          <a href="/protofolio/index.html"
+            class="underline underline-offset-8 font-bold text-xl lg:text-2xl text-primary mb-3">Portofolio</a>
           <h2 class="font-bold text-white text-2xl lg:text-3xl">Latest projects</h2>
         </div>
       </div>
       <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+        <div class="mb-12 p-4 md:w-1/2">
+          <div class="rounded-md shadow-md overflow-hidden">
+            <img src="dist/img/portfolio/Screenshot 2024-09-08 003329.png" alt="Kopi Kenangan" />
+          </div>
+          <h3 class="font-semibold text-xl text-white mt-5 mb-5">Berdaya Belajar</h3>
+          <p class="font-medium text-base text-white">
+            Mobile App design for Berdaya Belajar
+          </p>
+        </div>
         <div class="mb-12 p-4 md:w-1/2">
           <div class="rounded-md shadow-md overflow-hidden">
             <img src="dist/img/portfolio/Screenshot 2024-06-01 005255.png" alt="Kopi Kenangan" />
@@ -188,17 +198,6 @@
           </h3>
           <p class="font-medium text-base text-white">
             Final submission of machine learning class in dicoding
-          </p>
-        </div>
-        <div class="mb-12 p-4 md:w-1/2">
-          <div class="rounded-md shadow-md overflow-hidden">
-            <img src="dist/img/portfolio/Screenshot (251).png" alt="Machine Learning" />
-          </div>
-          <h3 class="font-semibold text-xl text-white mt-5 mb-5">
-            Machine learning classification messy room
-          </h3>
-          <p class="font-medium text-base text-white">
-            Machine learning class practice project in dicoding
           </p>
         </div>
       </div>
