--- a/protofolio/programming/programming.html
+++ b/protofolio/programming/programming.html
@@ -52,6 +52,42 @@
             <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
+                        <img src="/dist/img/portfolio/1.png" alt="LLM For SEO Audit" />
+                    </div>
+                    <h3 class="font-semibold text-xl text-white mt-5 mb-5">LLM For SEO Audit</h3>
+                    <p class="font-medium text-base text-white">
+                        Capstone Project with Bizzagi in Bangkit Academy
+                    </p>
+                </div>
+                <div class="mb-12 p-4 md:w-1/2">
+                    <div class="rounded-md shadow-md overflow-hidden">
+                        <img src="/dist/img/portfolio/Screenshot 2025-02-08 113801.png" alt="Bookshelf API" />
+                    </div>
+                    <h3 class="font-semibold text-xl text-white mt-5 mb-5">Digital Engineering laboratory Website</h3>
+                    <p class="font-medium text-base text-white">
+                        Website Profile for Digital Engineering Laboratory
+                    </p>
+                </div>
+                <div class="mb-12 p-4 md:w-1/2">
+                    <div class="rounded-md shadow-md overflow-hidden">
+                        <img src="/dist/img/portfolio/Screenshot 2025-02-08 113618.png" alt="Open Music API" />
+                    </div>
+                    <h3 class="font-semibold text-xl text-white mt-5 mb-5">Berdaya Belajar</h3>
+                    <p class="font-medium text-base text-white">
+                        Website Profile for Berdaya Belajar
+                    </p>
+                </div>
+                <div class="mb-12 p-4 md:w-1/2">
+                    <div class="rounded-md shadow-md overflow-hidden">
+                        <img src="/dist/img/portfolio/Screenshot 2025-02-08 065845.png" alt="Bookshelf API" />
+                    </div>
+                    <h3 class="font-semibold text-xl text-white mt-5 mb-5">Asclepius Web Server</h3>
+                    <p class="font-medium text-base text-white">
+                        Final sproject for the implementation of machine learning on Google Cloud
+                    </p>
+                </div>
+                <div class="mb-12 p-4 md:w-1/2">
+                    <div class="rounded-md shadow-md overflow-hidden">
                         <img src="/dist/img/portfolio/Screenshot 2024-06-01 005255.png" alt="Kopi Kenangan" />
                     </div>
                     <h3 class="font-semibold text-xl text-white mt-5 mb-5">Open Music API</h3>
